--- a/style.css
+++ b/style.css
@@ -17,6 +17,13 @@ body {
 .container header {
   margin-top: 6%;
 }
+
+@media (max-width: 600px){
+    .container header {
+      margin-top: 15%;
+    }
+}
+
 .container .section-header {
   margin: 2%;
   padding: 5px;
@@ -140,3 +147,16 @@ nav ul li a:active {
 }
 
 /* end of navigation section*/
+
+.footer {
+    display: block;
+    color: #bbbbbb;
+    text-align: center;
+    font-family: monospace;
+}
+
+
+.footer a, a:visited {
+    color: lightseagreen;
+    text-decoration: none
+}
