--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: #eee;
+  background-color: #202020;
 }
 
 .container {
@@ -29,7 +29,8 @@ body {
   padding: 5px;
   border-left: solid black 2px;
   background-color: rgba(127, 237, 255, 0.4);
-  color: #D94C87;
+  color: #ff0;
+  border-radius: 3px;
 }
 .container ul {
   margin: 0;
@@ -57,6 +58,7 @@ body {
   background-color: #38678f;
   color: #fff;
   padding: 1.25rem;
+  border-radius: 6px;
 }
 .container h2 {
   margin: 0;
