--- a/style.css
+++ b/style.css
@@ -135,11 +135,24 @@ nav ul li {
   height: 2%;
 }
 
+
+
 nav ul li a {
   text-decoration: none;
   color: white;
   padding: 20px;
 }
+
+
+/* for very small viewports */
+@media (max-width: 420px) {
+	nav ul li a {
+		font-size: small !important; /* Adjust font size */
+		color: blue !important; /* Change text color */
+		padding: 0px !important;
+	}
+}
+
 
 /* an underline appears at the bottom on hover of each link */
 nav ul li a:hover,
